Yet another graphics update

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -16,7 +16,7 @@
 .coollnklist {
     margin: 0;
     margin-top: 0.25rem;
-    color: blue;
+    color: blue !important;
     cursor: pointer;
 }
 .srchbtn {
@@ -179,7 +179,7 @@ a:active {
 }
 
 .secondoptioncontlay {
-    height: calc(4.2rem + 17px);
+    height: calc(6rem + 17px);
     transition-timing-function: ease-in-out;
     transition-duration: 1s;
 }
