--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -201,6 +201,7 @@ a:active {
 
 .fuzzysugslink {
     display: block;
+    color: black;
     margin: 0px auto;
     padding: 0.3rem;
     text-decoration: none;
