Fixed #127. Added a hint for the users what the field is for

--- a/web/Search.html
+++ b/web/Search.html
@@ -1053,8 +1053,8 @@ function ShowLinks()
                 </div>
 
                 <div id="InnerResultBanner" style="display:none;margin-top:2rem;">
-                    <span class='advanceoptsText'> Author:</span>
-                    <input id='author' onchange="SetAdvancedAuthor(this);return true;" class='advanceoptsInput' type="text" value=""> </input>
+                    <span class='advanceoptsText'> By:</span>
+                    <input id='author' onchange="SetAdvancedAuthor(this);return true;" class='advanceoptsInput' type="text" value="" placeholder="All authors"/> </input>
                     <div class='selectdiv' style="display:inline-block;">
                     <label>
                     <select id='collections' onchange='SetAdvancedCollections(this);return true;'>
