avoiding double closing of input

--- a/web/Search.html
+++ b/web/Search.html
@@ -1054,7 +1054,7 @@ function ShowLinks()
 
                 <div id="InnerResultBanner" style="display:none;margin-top:2rem;">
                     <span class='advanceoptsText'> By:</span>
-                    <input id='author' onchange="SetAdvancedAuthor(this);return true;" class='advanceoptsInput' type="text" value="" placeholder="All authors"/> </input>
+                    <input id='author' onchange="SetAdvancedAuthor(this);return true;" class='advanceoptsInput' type="text" value="" placeholder="All authors"/>
                     <div class='selectdiv' style="display:inline-block;">
                     <label>
                     <select id='collections' onchange='SetAdvancedCollections(this);return true;'>
