Changed advanced bar to always show

--- a/web/Search.html
+++ b/web/Search.html
@@ -1054,7 +1054,7 @@ function ShowLinks()
                     <button class='advanceopts' onclick='AddAdvancedBar();return true;'>Advanced Bar</button>
                 </div>
 
-                <div id="InnerResultBanner" style="display:none;margin-top:2rem;">
+                <div id="InnerResultBanner" style="display:block;margin-top:2rem;">
                     <span class='advanceoptsText' style="width:45px;"> By:</span>
                     <input id='author' onchange="SetAdvancedAuthor(this);return true;" class='advanceoptsInput' style="width:130px" type="text" value="" placeholder="All authors"/>
                     <div class='selectdiv' style="display:inline-block;">
