--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -14,52 +14,24 @@
     <script src="/GetBooks.js"></script>
 </head>
 <body>
-	<div class="pageContainer">
-	    <div style='top: 0;display: inline-grid; grid-column: 2 /span 1;height: 100vh;margin-bottom: 0;margin-right: 1rem;'> 
-	
-		<div id="SearchOpts" class="optioncont secondoptioncontlay" style='top: 0;background-color: white;overflow:scroll;'>
-		    
-		    <div style='display:grid;grid-template-columns: 9% 80% 9%;padding: 0;'>
-		    <div id="searchboxstuff" style='grid-column: 1 / span 3;height: 3rem;float:left;'>	
-			<div>
-			<input id='srchbox' style='display:inline-block;width:98%;border-radius: 20px;text-align:center;' type='text' placeholder="search within this book...">
-		<button id="srchButton" class='srchbtn' style='display:inline-block;margin:0;margin-left: -2.4rem;' type="button" onclick="doCompleteNewSearch();return true;"><i class="fa fa-search"></i></button>
-                </input>
-
-			</div>
-			<div id='fuzzysuggestions' class='fuzzysugs'>
-					<a>Link one</a>
-					<a>Link two</a>
-					<a>Link three</a>
-					<a>Link four</a>
-					<a>Link two</a>
-			</div>
-			<hr style='font-size:small;color:grey;'>
-		    </div>
-			<button style='grid-column: 1 /span 1;grid-row: 2 /span 1;max-height: 1.7rem' onclick="SelectLastHit();return true;">Last</button>
-			<div id='linklst' class='linkliststyler'></div>
-			<button style='grid-column: 3 /span 1;grid-row: 2 /span 1;max-height: 1.7rem' onclick="SelectNextHit();return true;">Next</button>
-		    </div>
-		    
-		    <div>
-			<div id="biblio" style='display: inline-block;color: green;'></div>
-			<a id='bookinfo' style='display: inline-block;'>[Book Info]</a>
-		    </div>
-		    <div id='divdrop' class='DivDropdown' onclick='showall(document.getElementById("SearchOpts"))'>
-			<img id='downimg' class='DropdownClass' src="/down.svg">
-			<img id='upimg' class='DropdownClass' style='display:none!important;' src='/up.svg'>
-		    </div> 
-		</div>
-
-		
-		<div id="OCRBuffer" class="ocrdispstyle">
-		    <p>Loading...</p>
-		</div>
-	    </div>
-
-	    <div id="thepagereader" class='reader' tabindex='0'>
-	    </div>
-	</div>
+    <nav>
+	<form action="/GetBooks.html" method="GET">
+	    <input id="nextsearchinputfield" type="text" placeholder="Search in this book..."/>
+	    <button>Do Full Search</button>
+	</form>
+    </nav>
+    <nav>
+	<button>Last</button>
+	<ul id="fullsearchhitlist">
+	    <li><a>1</a></li>
+	    <li><a>2</a></li>
+	</ul>
+	<button>Next</button>
+    </nav>
+    <div id="bookpageimagcontainer">
+    </div>
+    <div id="bookocrcontainer">
+    </div>
 </body>
 </html>
 
