--- a/web/Search.html
+++ b/web/Search.html
@@ -3,8 +3,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Search - clas digital</title>
@@ -19,7 +17,26 @@
 
 
 <body style='width: 100%; height: 100%;'>
-    <!-- The navigation bar config --> <div id='tpnav' class="topnav"></div>
+    <div id='tpnav' class="topnav">
+        <a id='homelink' href='/information/'>Information</a>
+        <a id='searchlink' class="active" href='/search'>Search</a>
+        <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
+        <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
+        <a id='managebookslink' class='classifiedContent' href='/private/write/ManageBooks.html' data-acc=2>Manage Books</a>
+
+        <div class='topnav-right-in' id='loggedintopnav'>
+            <span id='LoggedInAs'>Logged in</span>
+            <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+        </div>
+        <div class='topnav-right-out' id='loggedouttopnav'>
+            <form id ="LoginForm" action="/login" method="post">
+                <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
+                <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
+                <input type="submit" value="Log In"/>
+            </form>'
+        </div>
+
+    </div>
 
 
     <div id="searchboxid" class="button_box_top">
@@ -36,7 +53,7 @@
         </div>
         
         <div id="ResultBanner" style="display:none; margin-top:2rem;" >
-            <span class='advanceoptsText' style="width:45px;"> By:</span>
+            <span class='advanceoptsText' style="width:45px;">By:</span>
             <input id='author' onchange="ResetFocus();return true;" class='advanceoptsInput' style="width:130px" type="text" value="" placeholder="All authors"/>
             <div class='selectdiv' style="display:inline-block;">
                 <label>
