--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Informationen zu CLAS digital</title>
 
@@ -16,6 +14,15 @@ body {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+body {
+    margin:0;
+}
+
+html {
+    margin:0;
+}
+
 .GeneralPageLayout {
     width: 100%;
     text-align: center;
@@ -36,7 +43,24 @@ window.addEventListener("load",function(){User.initialise("homelink");},false);
 </script>
   </head>
 <body>
- <div id='tpnav' class="topnav"></div>
+    <div id='tpnav' class="topnav">
+        <a id='homelink' class="active" href='/information/'>Information</a>
+        <a id='searchlink' href='/search'>Search</a>
+        <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
+        <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
+        <a id='managebookslink' class='classifiedContent' href='/private/write/ManageBooks.html' data-acc=2>Manage Books</a>
+        <div class='topnav-right-in' id='loggedintopnav'>
+            <span id='LoggedInAs'>Logged in</span>
+            <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+        </div>
+        <div class='topnav-right-out' id='loggedouttopnav'>
+            <form id ="LoginForm" action="/login" method="post">
+                <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
+                <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
+                <input type="submit" value="Log In"/>
+            </form>'
+        </div>
+    </div>
 
  <div class="GeneralPageLayout">
      <p>
