--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -3,12 +3,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Manage books - clas digital</title>
 <link href="/topnav.css" rel="stylesheet" type="text/css">
 <style>
+
+html {
+    margin:0;
+}
+
+body {
+    margin:0;
+}
 
 .highmark {
 	background-color: yellow;
@@ -685,7 +691,26 @@ h1 {
   </head>
 <body>
 <!-- The navigation bar config -->
- <div id='tpnav' class="topnav"></div>
+<div id='tpnav' class="topnav">
+    <a id='homelink' href='/information/'>Information</a>
+    <a id='searchlink' href='/search'>Search</a>
+    <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
+    <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
+    <a id='managebookslink' class='classifiedContent active' href='/private/write/ManageBooks.html' data-acc=2>Manage Books</a>
+    <div class='topnav-right-in' id='loggedintopnav'>
+        <span id='LoggedInAs'>Logged in</span>
+        <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+    </div>
+    <div class='topnav-right-out' id='loggedouttopnav'>
+        <form id ="LoginForm" action="/login" method="post">
+            <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
+            <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
+            <input type="submit" value="Log In"/>
+        </form>'
+    </div>
+</div>
+
+
 <div id="BookInfoPage" class="GeneralPageLayout">
 	<h1><input id="fuzzysearchlist" oninput="fuzzysearchbooks(this);" class="inputHeader" type="text" placeholder="Search for books"></input></h1>
 <div style="width: 100%;height: 0.2rem;background-color: black;"></div>
