--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -3,12 +3,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<!--<link rel="stylesheet" href="style.css">-->
 		<title>Upload book - clas digital</title>
 		<script src="/user.js"></script>
 		<style>
+
+html {
+    margin:0;
+}
+body {
+    margin:0;
+}
 
 .biggerPageClass {
 	padding-left: 10%;
@@ -599,7 +604,28 @@ window.addEventListener("load",function(){User.initialise("uploadbooklink");},fa
 	</head>
 	<body>
 		<!-- The navigation bar config -->
-		<div id='tpnav' class="topnav"></div>
+		<div id='tpnav' class="topnav">
+            <a id='homelink' href='/information/'>Information</a>
+            <a id='searchlink' href='/search'>Search</a>
+            <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
+            <a id='uploadbooklink' class='classifiedContent active' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
+            <a id='managebookslink' class='classifiedContent' href='/private/write/ManageBooks.html' data-acc=2>Manage Books</a>
+
+            <div class='topnav-right-in' id='loggedintopnav'>
+                <span id='LoggedInAs'>Logged in</span>
+                <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+            </div>
+            <div class='topnav-right-out' id='loggedouttopnav'>
+                <form id ="LoginForm" action="/login" method="post">
+                    <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
+                    <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
+                    <input type="submit" value="Log In"/>
+                </form>'
+            </div>
+
+        </div>
+
+
 		<div id="StateBanner"></div>
 		<div class="biggerPageClass">
 			<h1>Volltexte hochladen</h1>
