--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>clas digital</title>
-<!-- <link rel="stylesheet" href="container.css"/>-->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+	<title>clas digital</title>
+	<!-- <link rel="stylesheet" href="container.css"/>-->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/GetBooks.css">	
-    <script src="/general.js"></script>
-    <script src="/GetBooks.js"></script>
-</head>
-<body>
-    <nav>
-	<form action="/GetBooks.html" method="GET">
-	    <input id="nextsearchinputfield" type="text" placeholder="Search in this book..."/>
-	    <button>Do Full Search</button>
-	</form>
-    </nav>
-    <nav>
-	<button>Last</button>
-	<ul id="fullsearchhitlist">
-	    <li><a>1</a></li>
-	    <li><a>2</a></li>
-	</ul>
-	<button>Next</button>
-    </nav>
-    <div id="bookpageimagcontainer">
-    </div>
-    <div id="bookocrcontainer">
-    </div>
-</body>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="/general.js"></script>
+	<script src="/GetBooks.js"></script>
+
+	<title>Show Book - clas - digital</title>
+    </head>
+    <body onload="initialise();">
+	<!--- Navbar element for the search bar and the next search -->
+	<div class='topnav'>
+	    <nav>
+		<center>
+		    <form action="/GetBooks.html" method="GET">
+<input id='srchbox' style='display:inline-block;width:98%;border-radius: 20px;text-align:center;' type='text' placeholder="search within this book...">
+		<button id="srchButton" class='srchbtn' style='display:inline-block;margin:0;margin-left: -2.4rem;' type="button" onclick="doCompleteNewSearch();return true;"><i class="fa fa-search" style='background-color: rgba(0,0,0,0.1);'></i></button>
+                </input>
+		    </form>
+		</center>
+	    </nav>
+
+	    <!--- Navbar element to iterate over the hit list on the page -->
+	    <nav>
+		<button>Last</button>
+		<ul id="fullsearchhitlist">
+		    <li><a>1</a></li>
+		    <li><a>2</a></li>
+		</ul>
+		<button>Next</button>
+	    </nav>
+
+	    <details id="bibliography" name="bibliography" placeholder="bibliography"></details>
+	</div>
+
+	<div class='botpage'>
+	</div>
+
+    </body>
 </html>
 
