Countinuing with working on html, javescript and css to make it work on internet explorer. Currently creating list of search results

--- a/web/Search.html
+++ b/web/Search.html
@@ -125,6 +125,8 @@
                <span style='color: grey;font-size:13px;'><span id="maxResults"></span> Ergebnisse gefunden in <span id="searchTime"></span></span>
             </div>
         </div>
-        <div id="SearchHitList" start="0" class="list-type2"></div>
+        <ul id="hitList" class="searchResults"></ul>
+        <ul id="linkcontainer"></ul>
+        <div id="SearchHitList"></div>
     </div> 
 </body>
