--- a/web/Search.html
+++ b/web/Search.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Search - clas digital</title>
 
@@ -26,7 +28,7 @@
 
         <div class='topnav-right-in' id='loggedintopnav'>
             <span id='LoggedInAs'>Logged in</span>
-            <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+            <button id='logoutBut' onclick='DoLogout()'>Logout</button>
         </div>
         <div class='topnav-right-out' id='loggedouttopnav'>
             <form id ="LoginForm" action="/login" method="post">
@@ -45,7 +47,7 @@
         <div class="betaversion"> This is a Beta version. Report Bugs at <a href="https://github.com/ShadowItaly/clas-digital/issues">clas-digital/issues</a>. Or use E-Mail: <a href="mailto:clas-digital-technik@dlist.server.uni-frankfurt.de">clas-digital-technik@dlist.server.uni-frankfurt.de</a>. </div> 
         <div style='position:relative'>
 
-            <input id="SpecialSID" onblur='sugg_disapear();return true;' style='display:inline-block;width:20%;border-radius:25px;hight:2rem;padding:3px 10px;' type="text" placeholder="Search here..." required>
+            <input id="SpecialSID" onblur='sugg_disapear();return true;' style='display:inline-block;width:20%;border-radius:25px;padding:3px 10px;' type="text" placeholder="Search here..." required>
                 <button id="srchButton" class='srchbtn' style='display:inline-block;margin:0;margin-left: -2.8rem;' type="button" onclick="sendToPage('SpecialSID');return true;"><i class="fa fa-search"></i></button>
             </input>
 
@@ -126,6 +128,7 @@
             </div>
         </div>
         <ul id="hitList" class="searchResults"></ul>
+        <hr id="bottomBorder" style="padding:0;display:none;">
         <ul id="linkcontainer"></ul>
         <div id="SearchHitList"></div>
     </div> 
