--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
 	<link rel="stylesheet" href="/GetBooks.css">	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="/general.js"></script>
 	<script src="/GetBooks.js"></script>
 
@@ -15,31 +15,30 @@
     </head>
     <body onload="initialise();">
 	<!--- Navbar element for the search bar and the next search -->
-	<div class='topnav'>
-	    <nav>
-		<center>
-		    <form action="/GetBooks.html" method="GET">
-<input id='srchbox' style='display:inline-block;width:98%;border-radius: 20px;text-align:center;' type='text' placeholder="search within this book...">
-		<button id="srchButton" class='srchbtn' style='display:inline-block;margin:0;margin-left: -2.4rem;' type="button" onclick="doCompleteNewSearch();return true;"><i class="fa fa-search" style='background-color: rgba(0,0,0,0.1);'></i></button>
-                </input>
-		    </form>
-		</center>
-	    </nav>
-
-	    <!--- Navbar element to iterate over the hit list on the page -->
-	    <nav>
-		<button>Last</button>
-		<ul id="fullsearchhitlist">
-		    <li><a>1</a></li>
-		    <li><a>2</a></li>
-		</ul>
-		<button>Next</button>
-	    </nav>
-
-	    <details id="bibliography" name="bibliography" placeholder="bibliography"></details>
+	<div class='searchbox'>
+	    <center>
+		<input id='srchbox' style='width:30%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-top: 0.5rem;height: 1.8rem;' type='text' placeholder="search within this book..."/>
+		<div style='position: relative;width: 30%;'>
+		    <div id='fuzzysuggestions' style='visibility:hidden;z-index: 5;position: absolute;top:0;background:white;border: 2px solid black;width: 55vw;'></div>
+		</div>
+	    </center>
+	    <hr/>
 	</div>
 
-	<div class='botpage'>
+	<div class='topnav'>
+	    <!--- Navbar element to iterate over the hit list on the page -->
+	    <nav class='linknav'>
+		<div class='lastbutcont'>
+		    <button class='lastbut' onclick='SelectLastHit();'>Last</button>
+		</div>
+		<div id="fullsearchhitlist">
+		</div>
+		<div class='nextbutcont'>
+		    <button class='nextbut' onclick='SelectNextHit();'>Next</button>
+		</div>
+	    </nav>
+
+	    <center><p id="bibliography" class="bibliostyle"></p></center>
 	</div>
 
     </body>
