Minor debugging changes

--- a/web/Search.html
+++ b/web/Search.html
@@ -127,9 +127,15 @@
                <span style='color: grey;font-size:13px;'><span id="maxResults"></span> Ergebnisse gefunden in <span id="searchTime"></span></span>
             </div>
         </div>
-        <ul id="hitList" class="searchResults"></ul>
-        <hr id="bottomBorder" style="padding:0;display:none;">
-        <ul id="linkcontainer"></ul>
+        <div>
+            <div><ul id="hitList" class="searchResults"></ul></div>
+            <div><hr id="bottomBorder" style="padding:0;display:none;"></div>
+            <div><ul id="linkcontainer" class="linkcontainer"></ul> </div>
+            <div id="next_last">
+                <a id="prev" class="prev_next">prev</a>
+                <a id="next" class="prev_next">next</a>
+            </div>
+        </div>
         <div id="SearchHitList"></div>
     </div> 
 </body>
