Trying to add drag bar

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -40,6 +40,8 @@
 
 	    <center><p id="bibliography" class="bibliostyle"></p></center>
 	</div>
+	<div class='resizer'>
+	</div>
 
     </body>
 </html>
