--- a/web/Search.html
+++ b/web/Search.html
@@ -35,7 +35,7 @@
                 <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
                 <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
                 <input type="submit" value="Log In"/>
-            </form>'
+            </form>
         </div>
 
     </div>
