Fix for internet explorer

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -13,7 +13,7 @@
 
 	<title>Show Book - clas - digital</title>
     </head>
-    <body onload="initialise();">
+    <body>
 	<!--- Navbar element for the search bar and the next search -->
 	<div class='searchbox'>
 	    <center>
