--- a/web/Search.html
+++ b/web/Search.html
@@ -47,7 +47,7 @@
         <div class="betaversion"> This is a Beta version. Report Bugs at <a href="https://github.com/ShadowItaly/clas-digital/issues">clas-digital/issues</a>. Or use E-Mail: <a href="mailto:clas-digital-technik@dlist.server.uni-frankfurt.de">clas-digital-technik@dlist.server.uni-frankfurt.de</a>. </div> 
         <div style='position:relative'>
 
-            <input id="SpecialSID" onblur='sugg_disapear();return true;' style='display:inline-block;width:20%;border-radius:25px;padding:3px 10px;' type="text" placeholder="Search here..." required>
+            <input id="SpecialSID" class="srchbar" onblur='sugg_disapear();return true;' type="text" placeholder="Search here..." required>
                 <button id="srchButton" class='srchbtn' style='display:inline-block;margin:0;margin-left: -2.8rem;' type="button" onclick="sendToPage('SpecialSID');return true;"><i class="fa fa-search"></i></button>
             </input>
 
