--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -5,7 +5,9 @@
 
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Manage books - clas digital</title>
-<link href="/topnav.css" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="/topnav.css" rel="stylesheet" type="text/css">
 <style>
 
 html {
