--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -5,6 +5,8 @@
 
 		<!--<link rel="stylesheet" href="style.css">-->
 		<title>Upload book - clas digital</title>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="/user.js"></script>
 		<style>
 
