--- a/web/Search.html
+++ b/web/Search.html
@@ -48,7 +48,7 @@
         <div style='position:relative'>
 
             <input id="SpecialSID" class="srchbar" onblur='sugg_disapear();return true;' type="text" placeholder="Search here..." required>
-                <button id="srchButton" class='srchbtn' style='display:inline-block;margin:0;margin-left: -2.8rem;' type="button" onclick="sendToPage('SpecialSID');return true;"><i class="fa fa-search"></i></button>
+                <button id="srchButton" class='srchbtn' type="button" onclick="sendToPage('SpecialSID');return true;"><i class="fa fa-search"></i></button>
             </input>
 
             <div id="suggs" class="sugg" align="left"></div>
