--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -8,6 +8,7 @@
 
     
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="/GetBooks.css">	
 	<script src="/general.js"></script>
@@ -19,7 +20,7 @@
 	<!--- Navbar element for the search bar and the next search -->
 	<div class='searchbox'>
 	    <center>
-		<input id='srchbox' style='width:30%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-top: 0.5rem;height: 1.4rem;' type='text' placeholder="search within this book..."/>
+		<input id='srchbox' style='width:30%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search within this book..."><i class="fa fa-search"></i></input>
 		<div style='position: relative;width: 30%;'>
 		    <div id='fuzzysuggestions' style='visibility:hidden;z-index: 5;position: absolute;top:0;background:white;border: 2px solid black;width: 55vw;'></div>
 		</div>
