changed url-name f_sort to sorting with relevance/alphabetically/chronologically as values

--- a/web/Search.html
+++ b/web/Search.html
@@ -115,10 +115,10 @@
                </div>
                 <div class='selectdiv' style="display:inline-block;">
                 <label>
-               <select id='f_sort' onchange='OpenFilter(this);return true;' onclick='return true;' style='background:white;'>
-                   <option value='0'>Sort by relevance</option>
-                   <option value='2'>Sort alphabetically</option>
-                   <option value='1'>Sort chronologically</option>
+               <select id='sorting' onchange='OpenFilter(this);return true;' onclick='return true;' style='background:white;'>
+                   <option value='relevance'>Sort by relevance</option>
+                   <option value='alphabetically'>Sort alphabetically</option>
+                   <option value='chronologically'>Sort chronologically</option>
                </select>
                </label>
                </div>
