Added a few new features like sticky images and placing the search button right and styling it with on hover

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -20,7 +20,7 @@
 	<!--- Navbar element for the search bar and the next search -->
 	<div class='searchbox'>
 	    <center>
-		<input id='srchbox' style='width:30%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search within this book..."><i class="fa fa-search"></i></input>
+		<input id='srchbox' style='width:30%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search within this book..."><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i></input>
 		<div style='position: relative;width: 30%;'>
 		    <div id='fuzzysuggestions' style='visibility:hidden;z-index: 5;position: absolute;top:0;background:white;border: 2px solid black;width: 55vw;'></div>
 		</div>
