--- a/web/Search.html
+++ b/web/Search.html
@@ -78,10 +78,10 @@
             </div>
                 <div class='selectdiv' style="display:inline-block;">
                     <label>
-                    <select id='searchIn' onchange='ResetFocus();return true;'>
-                        <option value='0'>Show Everything</option>
-                        <option value='1'>Show only Books without Text</option>
-                        <option value='2'>Show only Books with Text</option>
+                    <select id='scope' onchange='ResetFocus();return true;'>
+                        <option value='all'>Show Everything</option>
+                        <option value='metadata'>Show only Books without Text</option>
+                        <option value='body'>Show only Books with Text</option>
                     </select>
                     </label>
                 </div>
