--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -19,12 +19,13 @@
     <body>
 	<!--- Navbar element for the search bar and the next search -->
 	<div class='searchbox'>
-		<input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search this book"><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i>
-		<span id="bibliography" class="bibliostyle"></span></input>
-
-		<div style='position: relative;width: 30%;'>
+	    <center>
+	    <input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search this book"><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i></input>
+		<div style='position: relative;width: 25%;padding-left: 0.5rem;'>
 		    <div id='fuzzysuggestions' style='visibility:hidden;z-index: 5;position: absolute;top:0;left: 1rem;background:white;border: 2px solid black;width: 55vw;'></div>
 		</div>
+	    </center>
+	    <center><span id="bibliography" class="bibliostyle"></span></center>
 	</div>
 
 	<div class='topnav'>
